asfdemux: mo_size check bug fix. mo_size is not mandatory field.

So, don't need to check previous payload's mo_size and current
payload's mo_size when merging it.

https://bugzilla.gnome.org/show_bug.cgi?id=710609